--- a/naver.html
+++ b/naver.html
@@ -1,22 +1,29 @@
-gi<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Document</title>
-	<link rel="stylesheet" href="../frontend-css/css/style.css">
+	<link rel="stylesheet" href="../css/style.css">
 </head>
 <body>
 	<header class="header_wrap">
-		<h1>
-				<a href="#">
-						<span>naver</span>
-				</a>
-		</h1>
+		<div class="logo_area">
+			<h1>
+					<a href="#">
+							<span>naver</span>
+					</a>
+			</h1>
+		</div>
+		<div class="link">
+			<a href="#">네이버로 시작페이지로</a>
+			<a href="#">쥬니버네이버</a>
+			<a href="#">네이버로 시작페이지로</a>
+		</div>
 	<form class="sform">
 		<fieldset>
-			<legend>검색</legend>
+			<legend class="visually_hidden">검색</legend>
 			<select>
 				<option>통합검색</option>
 				<option>카페</option>
@@ -36,6 +43,27 @@ gi<!DOCTYPE html>
 			<button type="submit">검색</button>
 		</fieldset>
 	</form>
+	<nav class="gnb">
+		<ul>
+			<li><a href="/">메일</a></li>
+			<li><a href="/">카페</a></li>
+			<li><a href="/">블로그</a></li>
+			<li><a href="/">지식iN</a></li>
+			<li><a href="/">쇼핑</a></li>
+			<li><a href="/">Pay</a></li>
+			<li><a href="/">TV</a></li>
+			<li><a href="/">사전</a></li>
+			<li><a href="/">뉴스</a></li>
+			<li><a href="/">증권</a></li>
+			<li><a href="/">부동산</a></li>
+			<li><a href="/">지도</a></li>
+			<li><a href="/">영화</a></li>
+			<li><a href="/">뮤직</a></li>
+			<li><a href="/">책</a></li>
+			<li><a href="/">웹툰</a></li>
+			<li><a href="/">더보기</a></li>
+		</ul>
+	</nav>
 </header>
 <section class="sc_login">
 	<h2>로그인</h2>
