--- a/naver.html
+++ b/naver.html
@@ -12,11 +12,11 @@
 		<div class="logo_area">
 			<h1>
 					<a href="#">
-							<span>naver</span>
+						<span>naver</span>
 					</a>
 			</h1>
 		</div>
-		<div class="link">
+		<div class="links">
 			<a href="#">네이버로 시작페이지로</a>
 			<a href="#">쥬니버네이버</a>
 			<a href="#">네이버로 시작페이지로</a>
@@ -39,32 +39,42 @@
 					<option>긍정부정검색</option>
 				</optgroup>
 			</select>
-			<input type="search" placeholder="검색어를 입력해 주세요." required />
-			<button type="submit">검색</button>
+			<div class="green_window">
+				<input type="search" placeholder="검색어를 입력해 주세요." required / class="input_text">
+				<button type="submit" tabindex="2">검색</button>
+			</div>
 		</fieldset>
 	</form>
 	<nav class="gnb">
-		<ul>
-			<li><a href="/">메일</a></li>
-			<li><a href="/">카페</a></li>
-			<li><a href="/">블로그</a></li>
-			<li><a href="/">지식iN</a></li>
-			<li><a href="/">쇼핑</a></li>
-			<li><a href="/">Pay</a></li>
-			<li><a href="/">TV</a></li>
-			<li><a href="/">사전</a></li>
-			<li><a href="/">뉴스</a></li>
-			<li><a href="/">증권</a></li>
-			<li><a href="/">부동산</a></li>
-			<li><a href="/">지도</a></li>
-			<li><a href="/">영화</a></li>
-			<li><a href="/">뮤직</a></li>
-			<li><a href="/">책</a></li>
-			<li><a href="/">웹툰</a></li>
-			<li><a href="/">더보기</a></li>
-		</ul>
+		<div class="group_nav">
+			<ul>
+				<li><a href="/">메일</a></li>
+				<li><a href="/">카페</a></li>
+				<li><a href="/">블로그</a></li>
+				<li><a href="/">지식iN</a></li>
+				<li><a href="/">쇼핑</a></li>
+				<li><a href="/">Pay</a></li>
+				<li><a href="/">TV</a></li>
+				<li><a href="/">사전</a></li>
+				<li><a href="/">뉴스</a></li>
+				<li><a href="/">증권</a></li>
+				<li><a href="/">부동산</a></li>
+				<li><a href="/">지도</a></li>
+				<li><a href="/">영화</a></li>
+				<li><a href="/">뮤직</a></li>
+				<li><a href="/">책</a></li>
+				<li><a href="/">웹툰</a></li>
+				<li><a href="/">더보기</a></li>
+			</ul>
+			<div class="keyword">
+				<span class="color_naver">1</span>
+				<span>20220113</span></span>
+			</div>
+		</div>
+		
 	</nav>
 </header>
+<section id="content">
 <section class="sc_login">
 	<h2>로그인</h2>
 	<a href="#">네이버로그인</a>
