--- a/naver.html
+++ b/naver.html
@@ -48,7 +48,13 @@
 	<nav class="gnb">
 		<div class="group_nav">
 			<ul>
-				<li><a href="/">메일</a></li>
+				<li>
+					<a href="/">메일
+						<img src="./images/naver_mail.png" alt="메일" >
+							
+						</i>
+					</a>
+				</li>
 				<li><a href="/">카페</a></li>
 				<li><a href="/">블로그</a></li>
 				<li><a href="/">지식iN</a></li>
@@ -74,35 +80,39 @@
 		
 	</nav>
 </header>
-<section id="content">
-<section class="sc_login">
-	<h2>로그인</h2>
-	<a href="#">네이버로그인</a>
-	<div class="look_box">
-		<a href="#">아이디</a>
-		<a href="#">비밀번호</a>
-	</div>
-	<a href="#">회원가입</a>
-</section>
-<section class="sc_timesquare">
-	<h2 class="blind">타임스퀘어</h2>
-	<div class="card_wrap">
-		<div class="card_nav">
-			<a href="#">이전</a>
-			<a href="#">다음</a>
-		</div>
-	</div>
-	<a href="#" class="card_text">
-		<i></i>
-		<strong>
-			쉬운 방역패스로 바로가기 설치
-		</strong>
-	</a>
-</section>
-<section class="minibanner">
-	<a href="#">
-		<img src="images/naver_banner.jpg">
-	</a>
+<section class="main">
+	<section class="main-container">
+		<section class="main-box ad">
+			<a href="#">
+				<img src="./images/naver_mbanner.jpg">
+			</a>
+		</section>
+		<section class="main-box sc_login">
+			<h2>로그인</h2>
+			<p class="login_msg">
+				네이버를 더 안전하고 편리하게 이용하세요
+			</p>
+			<a href="#" class="link_login">
+				<i class="icon_naver">
+					<sapn class="naver">네이버</sapn>
+				</i>
+				로그인
+			</a>
+			<div class="lock_box">
+				<a href="#">아이디</a>
+				<a href="#">비밀번호</a>
+			</div>
+			<a href="#" class="link_join">회원가입</a>
+		</section>
+		<section class="main-box box-three-1">3-1</section>
+		<section class="main-box box-three-2">3-2</section>  
+		<section class="main-box box-four-1">4-1</section>
+		<section class="main-box box-four-2">4-2</section>
+		<section class="main-box box-five">5</section>
+		<section class="main-box box-six">6</section>
+		<section class="main-box box-seven">7</section>
+		<section class="main-box box-eight">8</section>
+	</section>>
 </section>
 </body>
 </html>
