--- a/naver.html
+++ b/naver.html
@@ -50,8 +50,6 @@
 			<ul>
 				<li>
 					<a href="/">메일
-						<img src="./images/naver_mail.png" alt="메일" >
-							
 						</i>
 					</a>
 				</li>
@@ -84,7 +82,7 @@
 	<section class="main-container">
 		<section class="main-box ad">
 			<a href="#">
-				<img src="./images/naver_mbanner.jpg">
+			<img src="./images/naver_mbanner.jpg">
 			</a>
 		</section>
 		<section class="main-box sc_login">
@@ -104,7 +102,30 @@
 			</div>
 			<a href="#" class="link_join">회원가입</a>
 		</section>
-		<section class="main-box box-three-1">3-1</section>
+		<section class="main-box grour_issue">
+			<div class="issue_area">
+				<a href="#">
+					연합뉴스
+				</a>
+			</div>
+			<a href="#" class="list_issue">
+			이준석"심식피폐" 김건희 발연
+			</a>
+			<div class="direct_area">
+				<a href="#">
+					뉴스홈
+				</a>
+				<a href="#">
+					연애
+				</a>
+				<a href="#">
+					스포츠
+				</a>
+				<a href="#">
+					경제
+				</a>
+			</div>
+		</section>
 		<section class="main-box box-three-2">3-2</section>  
 		<section class="main-box box-four-1">4-1</section>
 		<section class="main-box box-four-2">4-2</section>
