css연결오류수정

--- a/naver.html
+++ b/naver.html
@@ -5,7 +5,7 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Document</title>
-	<link rel="stylesheet" href="../css/style.css">
+	<link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
 	<header class="header_wrap">
@@ -21,7 +21,7 @@
 			<a href="#">쥬니버네이버</a>
 			<a href="#">네이버로 시작페이지로</a>
 		</div>
-	<form class="sform">
+	<form class="sform"><!--폼태그는 지워질수도 있어서 이렇게 하면 안됌-->
 		<fieldset>
 			<legend class="visually_hidden">검색</legend>
 			<select>
@@ -40,7 +40,7 @@
 				</optgroup>
 			</select>
 			<div class="green_window">
-				<input type="search" placeholder="검색어를 입력해 주세요." required / class="input_text">
+				<input type="search" placeholder="검색어를 입력해 주세요." required class="input_text">
 				<button type="submit" tabindex="2">검색</button>
 			</div>
 		</fieldset>
@@ -72,13 +72,13 @@
 			</ul>
 			<div class="keyword">
 				<span class="color_naver">1</span>
-				<span>20220113</span></span>
+				<span>20220113</span>
 			</div>
 		</div>
 		
 	</nav>
 </header>
-<section class="main">
+<section class="main"><!---->>
 	<section class="main-container">
 		<section class="main-box ad">
 			<a href="#">
