--- a/naver.html
+++ b/naver.html
@@ -78,7 +78,7 @@
 		
 	</nav>
 </header>
-<section class="main"><!---->>
+<section class="main"><!---->
 	<section class="main-container">
 		<section class="main-box ad">
 			<a href="#">
@@ -126,14 +126,8 @@
 				</a>
 			</div>
 		</section>
-		<section class="main-box box-three-2">3-2</section>  
-		<section class="main-box box-four-1">4-1</section>
-		<section class="main-box box-four-2">4-2</section>
-		<section class="main-box box-five">5</section>
-		<section class="main-box box-six">6</section>
-		<section class="main-box box-seven">7</section>
-		<section class="main-box box-eight">8</section>
-	</section>>
+
+	</section>
 </section>
 </body>
 </html>
