--- a/Practice/index.html
+++ b/Practice/index.html
@@ -17,9 +17,31 @@
           <form>
             <fieldset>
               <legend>통합검색 입력</legend>
+              <input class="type_text" name="q" autocomplete="off" type="text" />
+              <input type="submit" value="한글검색" class="type_btn" />
+              <input type="submit" value="검색" class="type_btn" />
             </fieldset>
           </form>
+          <a href="#">서제스트란?</a>
         </div>
+        <h3>인기 검색어</h3>
+        <ul>
+          <li><a href="#">코로나19 발생현황</a></li>
+          <li><a href="#">송혜교 기증</a></li>
+          <li><a href="#">단체문자보내는법</a></li>
+          <li><a href="#">유재석 1위</a></li>
+          <li><a href="#">싱글침대</a></li>
+        </ul>
+        <ul>
+          <li><a href="#">코로나19접종현환</a></li>
+          <li><a href="#">소연사과</a></li>
+          <li><a href="#">경주풀빌라</a></li>
+          <li><a href="#">이무진전속계약</a></li>
+          <li><a href="#">루테인추천</a></li>
+        </ul>
+        <button type="button">이전</button>
+        <button type="button">다음</button>
+        <a href="#">다음을시작하는페이지로</a>
       </header>
     </div>
   </body>
