--- a/Practice/index.html
+++ b/Practice/index.html
@@ -42,6 +42,17 @@
         <button type="button">이전</button>
         <button type="button">다음</button>
         <a href="#">다음을시작하는페이지로</a>
+        <h2>주요서비스</h2>
+        <ul>
+          <li><a href="#">카페</a></li>
+          <li><a href="#">메일</a></li>
+          <li><a href="#">뉴스</a></li>
+          <li><a href="#">지도</a></li>
+          <li><a href="#">증권</a></li>
+          <li><a href="#">쇼핑</a></li>
+          <li><a href="#">카페</a></li>
+          <li><a href="#">카페</a></li>
+        </ul>
       </header>
     </div>
   </body>
